# PharmaAI

./: .env  .env.example  .gitignore  Dockerfile  README.md  chatpwc.txt  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt  workflow_target.xml
.github/workflows/: ci.yml
agents/: __init__.py  aegis.py  chronicle.py  compliance.py  critique.py  meridian.py  nexus.py  pulse.py  sentinel.py
api/: auth.py  database.py  metrics.py  mock_data.py
config/: __init__.py  authority_matrix.py  drug_stability.py  settings.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.jsx  client.js
frontend/src/components/: AgentBadge.jsx  CycleRunner.jsx  KpiCard.jsx  LiveFeed.jsx  LoadingSpinner.jsx  SeverityBadge.jsx  Sidebar.jsx
frontend/src/pages/: ColdChain.jsx  Dashboard.jsx  Decisions.jsx  Demand.jsx  Inventory.jsx  Login.jsx  Staffing.jsx  SupplyChain.jsx
graph/: __init__.py  audit.py  execution.py  ingestion.py  state.py  workflow.py
logs/: audit.jsonl
prompts/: __init__.py  aegis.py  chronicle.py  compliance.py  critique.py  meridian.py  nexus.py  pulse.py  sentinel.py
tests/: __init__.py  test_api.py  test_auth.py  test_authority_matrix.py  test_db.py  test_drug_stability.py  test_ingestion.py  test_integration.py
tools/mcp/: __init__.py  cold_chain.py  communication.py  distributor.py  erp.py  external_intel.py  hrms.py  regulatory_kb.py
utils/: __init__.py  gemini_client.py  logger.py
